<resources>
    <string name="app_name">آنی کلاس</string>
    <string name="text_login_textview_name">آنی کلاس</string>
    <string name="text_login_textview_about">سامانه هوشمند مدیریت کلاس آنلاین</string>
    <string name="text_login_toolbar_title">ورود</string>
    <string name="text_login_edittext_hint_username">کدملی</string>
    <string name="text_login_edittext_hint_password">رمز عبور</string>
    <string name="text_login_textview_forget_password">رمز عبور را فراموش کردم</string>
    <string name="text_login_button_login">ورود به سامانه</string>
    <string name="text_login_textview_or">یا</string>
    <string name="text_login_textview_signup">ثبت نام</string>
    <string name="text_login_toast_is_empty">لطفاً فیلد های موجود را کنید</string>
    <string name="text_login_toast_signup">این کدملی ثبت نام نکرده اید</string>
    <string name="text_signup_toolbar_title">ثبت نام</string>
    <string name="text_signup_edittext_hint_name">نام</string>
    <string name="text_signup_edittext_hint_family">نام خانوادگی</string>
    <string name="text_signup_edittext_hint_nationalcode">کدملی</string>
    <string name="text_signup_edittext_hint_studentcode_or_teachercode">کد دانشجویی یا کد استادی</string>
    <string name="text_signup_edittext_hint_email">ایمیل</string>
    <string name="text_signup_edittext_hint_password">رمز عبور</string>
    <string name="text_signup_edittext_hint_confirm_password">تکرار رمز عبور</string>
    <string name="text_signup_edittext_hint_security_question">سوال امنیتی (نام اولین معلم یا دوست صمیمی)</string>
    <string name="text_signup_edittext_hint_signup_teachercode">کد ثبت نام (مخصوص استادان)</string>
    <string name="text_signup_button_signup">ثبت نام کاربر</string>
    <string name="text_signup_toast_name_and_family_is_empty">نام یا نام خانوادگی خود را درست وارد کنید</string>
    <string name="text_signup_toast_email_is_available">ایمیل وارد شده تکرار هست</string>
    <string name="text_signup_toast_email_is_empty">ایمیل خود را درست وارد کنید</string>
    <string name="text_signup_toast_nationalcode_is_available">کدملی وارد شده تکرار هست</string>
    <string name="text_signup_toast_nationalcode_is_empty">کدملی خود را درست وارد کنید</string>
    <string name="text_signup_toast_password_length">تعداد کاراکتر رمز عبور کم هست</string>
    <string name="text_signup_toast_password_check">رمز عبور با تکرارش یکسان نیست</string>
    <string name="text_signup_toast_security_quest_length">سوال امینتی را درست وارد کنید</string>
    <string name="text_signup_toast_signup_teachercode">کد ثبت نام را درست وارد کنید</string>
    <string name="text_forget_toolbar_title">فراموشی رمز عبور</string>
    <string name="text_forget_edittext_hint_nationalcode">کدملی</string>
    <string name="text_forget_edittext_hint_email">ایمیل</string>
    <string name="text_forget_edittext_hint_security_question">سوال امنیتی (نام اولین معلم یا دوست صمیمی)</string>
    <string name="text_forget_button_check_information">بررسی</string>
    <string name="text_dialog_forget_title">تغییر رمز عبور</string>
    <string name="text_dialog_forget_edittext_hint_new_password">رمز عبور جدید</string>
    <string name="text_dialog_forget_edittext_hint_confirm_new_password">تکرار رمز عبور جدید</string>
    <string name="text_dialog_forget_button_change_password">تغییر</string>
    <string name="text_dialog_forget_button_close">انصراف</string>
    <string name="text_forget_toast_information_is_empty">مشخصات خود را درست وارد کنید</string>
    <string name="text_dialog_forget_toast_password_length">تعداد کاراکتر رمز عبور کم هست</string>
    <string name="text_dialog_forget_toast_password_check">رمز عبور با تکرارش یکسان نیست</string>
    <string name="text_dialog_forget_toast_change_password">رمز عبور تغییر کرد</string>
    <string name="text_menu_student_my_profile">پروفایل من</string>
    <string name="text_menu_student_my_homework">تکلیف های من</string>
    <string name="text_menu_student_my_classes">کلاس های من</string>
    <string name="text_menu_student_my_search">جستجو</string>
    <string name="text_menu_teacher_my_profile">پروفایل من</string>
    <string name="text_menu_teacher_management_homework">مدیریت تکالیف</string>
    <string name="text_menu_teacher_management_classes">مدیریت کلاس ها</string>
    <string name="text_profile_student_toolbar_title">پروفایل من</string>
    <string name="text_profile_student_textview_name_and_family">امیدرضا باقریان اسفندانی</string>
    <string name="text_profile_student_textview_email">Omidreza@gmail.com</string>
    <string name="text_profile_student_textview_search_class">جستجوی کلاس</string>
    <string name="text_profile_student_textview_my_classes">کلاس های من</string>
    <string name="text_profile_student_textview_my_sessions">تکلیف های من</string>
    <string name="text_profile_student_textview_setting">تنظیمات</string>
    <string name="text_profile_student_textview_exit">خروج</string>
    <string name="text_profile_teacher_toolbar_title">پروفایل من</string>
    <string name="text_profile_teacher_textview_name_and_family">قاسم باقریان اسفندانی</string>
    <string name="text_profile_teacher_textview_email">Ghasem@gmail.com</string>
    <string name="text_profile_teacher_textview_management_class">مدیریت کلاس ها</string>
    <string name="text_profile_teacher_textview_management_homework">مدیریت تکالیف</string>
    <string name="text_profile_teacher_textview_management_university">مدیریت دانشگاه ها</string>
    <string name="text_profile_teacher_textview_management_department">مدیریت دپارتمان ها</string>
    <string name="text_profile_teacher_textview_setting">تنظیمات</string>
    <string name="text_profile_teacher_textview_exit">خروج</string>
    <string name="text_homework_student_toolbar_title">تکلیف های من</string>
    <string name="text_homework_student_textview_coming_soon">بزودی</string>
    <string name="text_management_homework_teacher_toolbar_title">مدیریت تکلیف ها</string>
    <string name="text_management_homework_teacher_textview_coming_soon">بزودی</string>
    <string name="text_search_class_student_edittext_hint_search">جستجو کنید</string>
    <string name="text_cardview_filter_search_student_lesson_title">عنوان درس:</string>
    <string name="text_cardview_filter_search_student_lesson_title_dash">-</string>
    <string name="text_cardview_filter_search_student_department_title">عنوان دپارتمان:</string>
    <string name="text_cardview_filter_search_student_name_teacher">مدرس:</string>
    <string name="text_cardview_filter_search_student_name_university">دانشگاه:</string>
    <string name="text_cardview_filter_search_student_show_detail">نمایش جزئیات</string>
    <string name="text_cardview_filter_search_student_add_class">اضافه کردن کلاس</string>
    <string name="text_filter_search_student_toolbar_title">جستجوی پیشرفته</string>
    <string name="text_filter_search_student_edittext_hint_class_code">کد کلاس</string>
    <string name="text_filter_search_student_edittext_hint_city">استان</string>
    <string name="text_filter_search_student_edittext_hint_department">دپارتمان</string>
    <string name="text_filter_search_student_edittext_hint_university">دانشگاه</string>
    <string name="text_dialog_filter_class_code_student_title">جستجو بر اساس کد کلاس</string>
    <string name="text_dialog_filter_class_code_student_edittext_hint_class_code">کد کلاس</string>
    <string name="text_dialog_filter_class_code_student_button_apply">اعمال</string>
    <string name="text_dialog_filter_class_code_student_button_cancel">انصراف</string>
    <string name="text_toast_filter_search_student_class_code_is_empty">کد کلاس خود را درست وارد کنید</string>
    <string name="text_detail_student_toolbar_title">جزئیات کلاس</string>
    <string name="text_cardview_detail_student_lesson_title">عنوان درس:</string>
    <string name="text_cardview_detail_student_lesson_title_dash">-</string>
    <string name="text_cardview_detail_student_department_title">عنوان دپارتمان:</string>
    <string name="text_cardview_detail_student_name_teacher">مدرس:</string>
    <string name="text_cardview_detail_student_name_university">دانشگاه:</string>
    <string name="text_cardview_detail_student_about_class">دانشگاه:</string>
    <string name="text_cardview_detail_student_class_about">توضیحات:</string>
    <string name="text_cardview_detail_student_show_session">نمایش جلسات</string>
    <string name="text_my_class_student_toolbar_title">کلاس های من</string>
    <string name="text_cardview_my_class_student_lesson_title">عنوان درس:</string>
    <string name="text_cardview_my_class_student_lesson_title_dash">-</string>
    <string name="text_cardview_my_class_student_department_title">عنوان دپارتمان:</string>
    <string name="text_cardview_my_class_student_name_teacher">مدرس:</string>
    <string name="text_cardview_my_class_student_name_university">دانشگاه:</string>
    <string name="text_cardview_my_class_student_show_detail">نمایش جزئیات</string>
    <string name="text_cardview_my_class_student_remove_class">حذف کردن کلاس</string>
    <string name="text_setting_toolbar_title">تنظیمات</string>
    <string name="text_setting_edittext_hint_name">نام</string>
    <string name="text_setting_edittext_hint_family">نام خانوادگی</string>
    <string name="text_setting_edittext_hint_email">ایمیل</string>
    <string name="text_setting_edittext_hint_nationalcode">کدملی</string>
    <string name="text_setting_edittext_hint_password">رمز عبور</string>
    <string name="text_setting_edittext_hint_access_department">دسترسی دپارتمان</string>
    <string name="text_setting_edittext_hint_access_university">دسترسی دانشگاه</string>
    <string name="text_setting_button_send_edit">تغییرات</string>
    <string name="text_dialog_setting_name_title">تغییر نام</string>
    <string name="text_dialog_setting_name_edittext_hint_class_code">نام جدید</string>
    <string name="text_dialog_setting_name_button_apply">اعمال</string>
    <string name="text_dialog_setting_name_button_cancel">انصراف</string>
    <string name="text_toast_setting_name_is_empty">نام خود را درست وارد کنید</string>
    <string name="text_dialog_setting_family_title">تغییر نام خانوادگی</string>
    <string name="text_dialog_setting_family_edittext_hint_class_code">نام خانوادگی جدید</string>
    <string name="text_dialog_setting_family_button_apply">اعمال</string>
    <string name="text_dialog_setting_family_button_cancel">انصراف</string>
    <string name="text_toast_setting_family_is_empty">نام خانوادگی خود را درست وارد کنید</string>
    <string name="text_dialog_setting_email_title">تغییر ایمیل</string>
    <string name="text_dialog_setting_email_edittext_hint_new_email">ایمیل جدید</string>
    <string name="text_dialog_setting_email_edittext_hint_confirm_new_email">تکرار ایمیل جدید</string>
    <string name="text_dialog_setting_email_button_apply">اعمال</string>
    <string name="text_dialog_setting_email_button_cancel">انصراف</string>
    <string name="text_toast_setting_new_email_is_empty">ایمیل خود را درست وارد کنید</string>
    <string name="text_toast_setting_new_email_is_check">ایمیل جدید با تکرارش یکسان نیست</string>
    <string name="text_dialog_setting_nationalcode_title">تغییر کدملی</string>
    <string name="text_cardview_management_class_teacher_lesson_title">عنوان درس:</string>
    <string name="text_cardview_management_class_teacher_lesson_title_dash">-</string>
    <string name="text_cardview_management_class_teacher_department_title">عنوان دپارتمان:</string>
    <string name="text_cardview_management_class_teacher_name_teacher">مدرس:</string>
    <string name="text_cardview_management_class_teacher_name_university">دانشگاه:</string>
    <string name="text_cardview_management_class_teacher_about_class">توضیحات:</string>
    <string name="text_cardview_management_class_teacher_management_session">مدیریت جلسات</string>
    <string name="text_cardview_management_class_teacher_delete_class">حذف</string>
    <string name="text_cardview_management_class_teacher_edit_class">ویرایش</string>
</resources>