<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_dialog_setting_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/iransans_bold"
        android:text="@string/text_dialog_setting_email_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput_layout_dialog_setting_new_email_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_dialog_setting_email_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_edittext_dialog_setting_new_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iransans_regular"
            android:hint="@string/text_dialog_setting_email_edittext_hint_new_email"
            android:inputType="text"
            android:maxLength="64"
            android:textAlignment="center"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textinput_layout_dialog_setting_confirm_new_email_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textinput_layout_dialog_setting_new_email_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textinput_edittext_dialog_setting_confirm_new_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iransans_regular"
            android:hint="@string/text_dialog_setting_email_edittext_hint_confirm_new_email"
            android:inputType="text"
            android:maxLength="64"
            android:textAlignment="center"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@+id/textinput_layout_dialog_setting_confirm_new_email_text">

        <Button
            android:id="@+id/button_dialog_setting_email_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iransans_regular"
            android:text="@string/text_dialog_setting_email_button_cancel"
            android:textSize="18sp" />

        <View
            android:layout_width="12dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/button_dialog_setting_email_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/iransans_regular"
            android:text="@string/text_dialog_setting_email_button_apply"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>